SERVER-34833 Sessions transaction reaper should refresh routing info before locking config.transactions